--- a/src/sass/layout.scss/_gallery.scss
+++ b/src/sass/layout.scss/_gallery.scss
@@ -1,26 +1,42 @@
-/* .container {
-  width: 100%;
-  max-width: 1280;
-  margin-left: auto;
-  margin-right: auto;
-  padding: 60px 115px;
-} */
+.gallery {
+  padding-top: 45px;
+  padding-bottom: 40px;
+
+  @include for-tablet {
+    padding-top: 70px;
+    padding-bottom: 60px;
+  }
+
+  @include for-desktop {
+    padding-top: 65px;
+    padding-bottom: 65px;
+  }
+}
+
 .gallery__grid {
   display: grid;
   grid-template-columns: repeat(14, 1fr);
   grid-template-rows: repeat(36, 1fr);
-  grid-gap: 7px;
+  grid-gap: 2px;
 
   background-image: linear-gradient($light-bg 50%, #fff 50%);
-  width: 320px;
+  width: 100%;
   height: 122px;
 
+  @include for-phone {
+    grid-gap: 3px;
+    width: 480;
+    height: 182px;
+  }
+
   @include for-tablet {
+    grid-gap: 5px;
     width: 768px;
     height: 264px;
   }
 
   @include for-desktop {
+    grid-gap: 7px;
     width: 1280px;
     height: 430px;
   }
@@ -30,7 +46,15 @@
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 20px;
+  border-radius: 7px;
+
+  @include for-tablet {
+    border-radius: 15px;
+  }
+
+  @include for-desktop {
+    border-radius: 20px;
+  }
 }
 
 .gallery__item--1 {
